add/ rm functions

--- a/src/rm/CMakeLists.txt
+++ b/src/rm/CMakeLists.txt
@@ -1,3 +1,5 @@
-add_library(rm rm.cc)
+add_library(rm rm.cc
+        rm_utils.h
+        rm_utils.h)
 add_dependencies(rm rbfm ix googlelog)
 target_link_libraries(rm rbfm ix glog)
