--- a/src/ix/CMakeLists.txt
+++ b/src/ix/CMakeLists.txt
@@ -1,3 +1,5 @@
-add_library(ix ix.cc)
+add_library(ix ix.cc
+        ix_utils.h
+)
 add_dependencies(ix pfm googlelog)
 target_link_libraries(ix pfm glog)
